--- a/docs/.vitepress/theme/style/custom.scss
+++ b/docs/.vitepress/theme/style/custom.scss
@@ -1,3 +1,8 @@
+:root {
+  --vp-c-brand-1: #10b981;
+  --vp-c-brand-2: #34d399;
+  --vp-c-brand-3: #10b981;
+}
 .VPNav {
   // position: sticky !important;
   position: fixed !important;
