--- a/docs/.vitepress/theme/style/fancybox.scss
+++ b/docs/.vitepress/theme/style/fancybox.scss
@@ -3,11 +3,9 @@
   --fancybox-bg: none;
   .fancybox__toolbar {
     --f-button-bg: none;
-    --f-button-color: #191a1c;
-    --f-button-hover-bg: rgba(var(--vp-c-bg-reverse-rgb), .1);
-    --f-button-hover-color: rgba(var(--vp-c-bg-reverse-rgb), 1);
+    --f-button-color: var(--vp-c-text-1);
     --f-button-svg-disabled-opacity: 0.2;
-    background: rgba(var(--vp-c-bg-rgb), 0.2);
+    background: var(--vp-c-bg);
   }
   &::before {
     content: "";
@@ -16,16 +14,16 @@
     top: 0;
     bottom: 0;
     right: 0;
-    background: rgba(var(--vp-c-bg-rgb), 0.5);
-    opacity: 0.96;
-    backdrop-filter: blur(10px);
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(20px);
   }
 }
 .fancybox-image {
   object-fit: initial;
 }
 .is-classic .is-nav-selected .f-thumbs__slide__button::after {
-  border-color: var(--weiz-primary-color); // 主题色修改为个人的
+  border-color: var(--vp-c-brand);
 }
 .fancybox__caption {
   color: var(--vp-c-text-1);
