--- a/docs/.vitepress/theme/style/fancybox.scss
+++ b/docs/.vitepress/theme/style/fancybox.scss
@@ -15,8 +15,15 @@
     bottom: 0;
     right: 0;
     opacity: 1;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(20px);
+  }
+}
+html[data-invert='false'] {
+  .fancybox__container {
+    &::before {
+      background: rgba(0, 0, 0, 0.5);
+    }
   }
 }
 .fancybox-image {
