--- a/docs/.vitepress/theme/style/init.scss
+++ b/docs/.vitepress/theme/style/init.scss
@@ -40,7 +40,7 @@ body {
 @font-face {
   font-display: swap;
   font-family: Alimama;
-  src: url("./Alimama.woff2") format("woff2");
+  src: url("https://blog-1256565862.cos.ap-guangzhou.myqcloud.com/blog/Alimama.woff2") format("woff2");
 }
 @media screen and (width <= 768px) {
   html {
